Dimmu burger planning phase

--- a/dimmuBurger.html
+++ b/dimmuBurger.html
@@ -26,20 +26,20 @@
     </div>
     <br>
     <!-- banner  ------------------------------>
-    <img src="dimmuBurger/dimmuBurger_longbanner.png" alt="Smeet" class="cenBanner">
-    <img src="dimmuBurger/dimmuBurger_myburger.png" alt="Smeet" class="cenBannersquare">
+    <img src="dimmuBurger/dimmuBurger_longbanner.png" alt="dimmu Burger" class="cenBanner">
+    <img src="dimmuBurger/dimmuBurger_myburger.png" alt="dimmu Burger" class="cenBannersquare">
     <div id="overview"></div>
     <!-- Contact me buttons ------------------------------>
     <div class="sticky">
         <!-- <div class="mar"></div> -->
-                <nav class="shift">
-                    <ul>
-                        <li><a href="#overview">Overview</a></li>
-                        <li><a href="#">Planning</a></li>
-                        <li><a href="#">Development</a></li>
-                        <li><a href="#">Reflection</a></li>
-                    </ul>
-                    </nav>
+        <nav class="shift">
+            <ul>
+                <li><a href="#overview">Overview</a></li>
+                <li><a href="#">Planning</a></li>
+                <li><a href="#">Development</a></li>
+                <li><a href="#">Reflection</a></li>
+            </ul>
+        </nav>
         <div class="progress-container">
             <div class="progress-bar" id="myBar"></div>
         </div>
@@ -48,6 +48,19 @@
         <h1 class="w">Overview</h1>
         <p>Build a <b>web application</b> which enables Customers to order customised burger and separate <b>java
                 application</b> that displays the order to kitchen production line and reorder ingredients. </p>
+        <h2>Project Team: </h2>
+        <ul class="dark">
+            <li><b>Smeet (Myself):</b> Lead Web Developer (Produced exciting the web application, created content,
+                set-up the SQL databases for website & research)</li>
+            <li><b>Fiona: </b>Lead Java Developer (Assisted and help other members and looked over the production line
+                Java Application)</li>
+            <li><b>Kelly: </b>Implementation Officer (implemented the Heroku hosting and help debug, test and style the
+                web & java application)</li>
+            <li><b>Sinny: </b>Content Manager (produce some content & gathered icons and helped in the production line
+                application.</li>
+            <li><b>Heba: </b> Java GUI Developer (produced the production line login GUI and learning basic. <u>Away
+                    for 2 days.</u>)</li>
+        </ul>
         <h1 class="w">Planning</h1>
         <h2>Project Summary </h2>
         <p>This project is an application development for a (fictitious) burger restaurant in Wellington which aims to
@@ -68,106 +81,51 @@
         <h2>App Stakeholders </h2>
         <ul class="dark">
             <li><b>Customers</b> order burgers by selecting ingredients on the web application.</li>
-            <li><b>Admin / senior member of kitchen</b> can Check ingredient stock levels and Order new ingredients as needed.</li>
-            <li><b>Kitchen staff</b> will receive new orders and Change status of orders (received, in progress, complete). </li>
+            <li><b>Admin / senior member of kitchen</b> can Check ingredient stock levels and Order new ingredients as
+                needed.</li>
+            <li><b>Kitchen staff</b> will receive new orders and Change status of orders (received, in progress,
+                complete). </li>
         </ul>
-        <table>
-            <tr>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
-
-        <div class="content">
-            <h3>Sticky Navigation Example</h3>
-            <p>The navbar will stick to the top when you reach its scroll position.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        </div>
-        <div class="content">
-            <h3>Sticky Navigation Example</h3>
-            <p>The navbar will stick to the top when you reach its scroll position.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        </div>
-        <div class="content">
-            <h3>Sticky Navigation Example</h3>
-            <p>The navbar will stick to the top when you reach its scroll position.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        </div>
-
-        <!-- <h1 class="w">2Shakes CX Redesign</h1>
-        <div class="containerWork">
-            <div class="rowTwo">
-                <div class="columnTwo" align="center">
-                    <a class="btn btn-icon btn-git" href="https://github.com/smeet-patel/SportsWorld-HTML-CSS-JS-PHP-"><i
-                            class="fa fa-github"></i><span>MY 2015 Cyber CV on Git Hub</span></a>
+        <h2>General Diagram / Brainstorm </h2>
+        <img src="dimmuBurger/generaldiagram_dimmu.PNG" alt="dimmu Burger" class="cenimg">
+        <p style="text-align:center;"><i>Left Diagram shows the user interactions with the web application and expected information flow. The right
+            diagram shows our idea of how the two application will communicate with each server.</i></p>
+        <h2>Plan Design and Initial Reseach Process </h2>
+        <p>Our first step was to individually research the background on a burger ordering system and make a note of
+            the feature which we thought were important. Following this, we then came back together to share our ideas
+            and thoughts. This led to drafting an outline of the general structure of the applications and integration
+            with the server. </p>
+            <div class="centerWrap">
+                    <!--Centering everything in the div-->
+                    <!--enable for the flex tiles row and col--->
+                    <div class="row">
+                        <div class="column">
+                            <br>
+                            <!--container consist the image and text to display center
+                              when full screen---------------------------------------->
+                            <div class="hoverOverImage">
+                                <img src="dimmuBurger/burger_fuel.png" alt="burger fuel ordering" class="hoverOverImage-layer_bottom" id="conner_round">
+                                <!-- <a href="mywork.html"> -->
+                                    <div class="hoverOverImage-layer_top">
+                                        <div class="hoverOverImage-text">Researching example of burger ordering (Burger Fuel)</div>
+                                    </div>
+                                <!-- </a> -->
+                            </div>
+                        </div>
+                        <!--second col-------------->
+                        <div class="column">
+                            <br>
+                            <div class="hoverOverImage">
+                                <img src="dimmuBurger/kitchen_mcD.jpg" alt="mcdonalds kitchen" class="hoverOverImage-layer_bottom" id="conner_round">
+                                <!-- <a href="mywork.html"> -->
+                                    <div class="hoverOverImage-layer_top">
+                                        <div class="hoverOverImage-text">Imagining McDonald's kitchen production line system</div>
+                                    </div>
+                                <!-- </a> -->
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="columnTwo" align="center">
-                    <a class="btn btn-icon btn-cv" href="https://smeet-patel.github.io/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"><i
-                            class="fa fa-user-circle-o"></i><span>MY 2015 Cyber CV</span></a>
-                </div>
-            </div>
-        </div>
-        <h2>Task:</h2> -->
     </div>
 
     <!-- footer ------------------------------>
