--- a/dimmuBurger.html
+++ b/dimmuBurger.html
@@ -208,6 +208,22 @@
         <p style="text-align:center;" id="dev"><i>The last Wireframe shows the ingredients ordering dashboard where the admin
                 staff will log in to order.</i></p>
         <h1 class="w">Development</h1>
+        <h2>Monday and Tuesday (5th & 6th) November</h2>
+        <ul class="dark">
+            <li>Planning report, setting up a Slack channel and Google Drive folder </li>
+            <li>Logo creation, Database schema, Class diagram, Wireframes, setting up visual studio code and GitLab </li>
+        </ul>
+        <h2>Wednesday and Thursday</h2>
+        <h3 style="color: orange">Personal Progress </h3>
+        <ul class="dark">
+            <li>For most parts of the first day my role was to research into different hosting technologies such as Heroku and Firebases. </li>
+            <li>The second day I had already created two blank pages to host on Git Pages and for the second day created the form with a progress bar on the top, but without any functionality.</li>
+        </ul>
+        <h3 style="color: orange">Team Progress </h3>
+        <ul class="dark">
+            <li>Creating production app method stubs and staring on GUI (Fiona, Heba and Sinny)</li>
+            <li>The second day I had already created two blank pages to host on Git Pages and for the second day created the form with a progress bar on the top, but without any functionality.</li>
+        </ul>
     </div>
 
     <!-- footer ------------------------------>
