commention out the contact link in nav

--- a/dimmuBurger.html
+++ b/dimmuBurger.html
@@ -18,7 +18,7 @@
     <!-- nav bar ------------------------------>
     <div class="nav1" id="mynav1">
         <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
-        <a href="mycon.html">CONTACT</a>
+        <!-- <a href="mycon.html">CONTACT</a> -->
         <a href="myblog.html">BLOG</a>
         <a href="mywork.html">MY WORK</a>
         <a href="aboutme.html">ABOUT ME</a>
