--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--Adding My logo to the left and always showing -->
         <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
         <!--Floating to the Left Side of the menu, the other pages-->
-        <a href="mycon.html">CONTACT</a>
+        <!-- <a href="mycon.html">CONTACT</a> -->
         <a href="myblog.html">BLOG</a>
         <a href="mywork.html">MY WORK</a>
         <a href="aboutme.html">ABOUT ME</a>
