--- a/myblog.html
+++ b/myblog.html
@@ -17,7 +17,7 @@
       <div class="bannerContainer">
          <img src="p39.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
          <div class="bottom-left">
-            <p><b>BLOG</b></p>
+            <p style="color: white"><b>BLOG</b></p>
          </div>
       </div>
       <div class="centerWrap">
