--- a/2Shakes.html
+++ b/2Shakes.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>2Shakes CX Redesign</title>
-		<!-- Stylesheets ------------------------------>
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="style1.css">
-		<!-- My my mini icon ------------------------------>
-		<link rel="icon" href="spMini.png">
-		<!-- Make the scale of screen to 1 to device ------------------------------>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<head>
+    <title>Dimmu Burger | Project</title>
+    <!-- Stylesheets ------------------------------>
+    <link rel="stylesheet" type="text/css" href="CSS/project.css">
+    <!-- My my mini icon ------------------------------>
+    <link rel="icon" href="spMini.png">
+    <!-- Make the scale of screen to 1 to device ------------------------------>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-		<script type="text/javascript" src="Smeetjavascript.js"></script>
-	</head>
-	<body>
-		<!-- nav bar ------------------------------>
-		<div class="nav1" id="mynav1">
-			<a href="index.html" class="active"><img src="spw1.png" height="40"></a>
-			<a href="mycon.html">CONTACT</a>
-			<a href="myblog.html">BLOG</a>
-			<a href="mywork.html">MY WORK</a>
-			<a href="aboutme.html">ABOUT ME</a>
-			<a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
-		</div>
-		<!-- banner  ------------------------------>
-		<div class="bannerContainer">
-			<img src="2shakes.png" alt="Sports world website" style="width:100%" class="responsiveImg">
-			<div class="bottom-left">
-				<div class="add1">
-					<!--<p><b>SPORTS WORLD</b></p>-->
-				</div>
-			</div>
-		</div>
+<script type="text/javascript" src="Smeetjavascript.js"></script>
+</head>
+
+<body>
+    <!-- nav bar ------------------------------>
+    <div class="nav1" id="mynav1">
+        <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
+        <!-- <a href="mycon.html">CONTACT</a> -->
+        <a href="myblog.html">BLOG</a>
+        <a href="mywork.html">MY WORK</a>
+        <a href="aboutme.html">ABOUT ME</a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
+    </div>
+    <br>
+    <!-- banner  ------------------------------>
+    <img src="dimmuBurger/dimmuBurger_longbanner.png" alt="dimmu Burger" class="cenBanner">
+    <img src="dimmuBurger/dimmuBurger_myburger.png" alt="dimmu Burger" class="cenBannersquare">
+    <div id="overview"></div>
+    <!-- Contact me buttons ------------------------------>
+    <div class="sticky">
+        <!-- <div class="mar"></div> -->
+        <nav class="shift">
+            <ul>
+                <li><a href="#overview">Overview</a></li>
+                <li><a href="#planning">Planning</a></li>
+                <li><a href="#dev">Development</a></li>
+                <li><a href="#">Reflection</a></li>
+            </ul>
+        </nav>
+        <div class="progress-container">
+            <div class="progress-bar" id="myBar"></div>
+        </div>
+    </div>
 		<!-- Contact me buttons ------------------------------>
 		<div class="centerWrap">
 			<h1 class="w">2Shakes CX Redesign</h1>
