--- a/mywork.html
+++ b/mywork.html
@@ -23,7 +23,7 @@
       <div class="bannerContainer">
          <img src="p41.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
          <div class="bottom-left">
-            <p><b>MY WORK</b></p>  
+            <p style="color: white"><b>MY WORK</b></p>  
          </div>
       </div>
 	  
@@ -44,10 +44,10 @@
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="CyberCV2015.html"></a>
+                           <a id="share" class="share-toggle share-icon" href="dimmuBurger.html"></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="CyberCV2015.html">Dimmu Burger (Group Project) </a></h3>
+                           <h3><a href="dimmuBurger.html">Dimmu Burger (Group Project) </a></h3>
                            <p>I was a Lead Web Developer for group project which was to create a web application that allows customers to create customised burger and java production line. </p>
                            <br>
                         </article>
@@ -68,10 +68,10 @@
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="#"></a>
+                           <a id="share" class="share-toggle share-icon" href="2Shakes.html"></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="#">2Shakes CX Redesign</a></h3>
+                           <h3><a href="2Shakes.html">2Shakes CX Redesign</a></h3>
                            <p>A team project which we redesigned the user interface and experience by creating a  high-fidelity prototype for setting up a new profile for the 2Shakes web application.</p>
                         </article>
                      </div>
