--- a/2Shakes.html
+++ b/2Shakes.html
@@ -35,9 +35,9 @@
         <nav class="shift">
             <ul>
                 <li><a href="#overview">Overview</a></li>
-                <li><a href="#planning">Planning</a></li>
+                <!-- <li><a href="#planning">Planning</a></li>
                 <li><a href="#dev">Development</a></li>
-                <li><a href="#">Reflection</a></li>
+                <li><a href="#">Reflection</a></li> -->
             </ul>
         </nav>
         <div class="progress-container">
